--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,7 +17,7 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: leomanzini-dev 
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: dist/github-contribution-grid-snake.svg?palette=pacman
 
       - name: Push Snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3
