--- a/.github/workflows/3d-contrib.yml
+++ b/.github/workflows/3d-contrib.yml
@@ -10,12 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      # AÇÃO CORRIGIDA: Parâmetros movidos para o bloco "env"
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          github_user: leomanzini-dev
-          output_path: dist
-          file_name: github-3d-contrib.svg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USER_NAME: leomanzini-dev
+          OUTPUT_PATH: dist
+          FILE_NAME: github-3d-contrib.svg
+
+      # Esta parte que envia o arquivo para a branch "output" continua a mesma
       - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
