--- a/.github/workflows/3d-contrib.yml
+++ b/.github/workflows/3d-contrib.yml
@@ -11,7 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # PASSO NOVO: Criando a pasta "dist" manualmente
       - name: Create output directory
         run: mkdir -p dist
 
@@ -19,12 +18,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: leomanzini-dev
-          OUTPUT_PATH: dist # Agora a ação vai encontrar esta pasta para salvar o arquivo
+          OUTPUT_PATH: dist
           FILE_NAME: github-3d-contrib.svg
 
       - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
-          build_dir: dist # E esta ação também vai encontrar a pasta para publicar
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
